Icon logic added and commented code removed

--- a/force-app/main/default/classes/RRListMetaDataDao.cls
+++ b/force-app/main/default/classes/RRListMetaDataDao.cls
@@ -10,7 +10,7 @@ public class RRListMetaDataDao extends MetaDataDao{
     public override void queryMetaData(String key){
         metaDataList = [Select Id, MasterLabel, Column_JSON__c, Column_Header_Buttons_JSON__c, Column_Buttons_JSON__c,
              Component_Title__c, Header_Buttons_JSON__c, Query_post_condition__c, Query_without_conditions__c, 
-             Top_records_to_be_shown__c, Where_condition__c, JsonFlattenServiceName__c
+             Top_records_to_be_shown__c, Where_condition__c, Header_Icon__c, JsonFlattenServiceName__c
              from reusable_List_MetaData__mdt where developerName =: key];
     }
     
