--- a/force-app/main/default/classes/IQueryBuilderService.cls
+++ b/force-app/main/default/classes/IQueryBuilderService.cls
@@ -1,5 +1,5 @@
 /*************************************************************************************************
-* This file is part of the apex-limit-framework project, released under the MIT License.             *
+* This file is part of the related-list-reusable-component project, released under the MIT License.             *
 * See LICENSE file or go to https://github.com/Jaspreet1992/RelatedListReusableComponents for full license details. *
 *************************************************************************************************/ 
 
